# openai-model-tracker

./: README.md  flake.nix  openai_models.json  pyproject.toml
.github/workflows/: check-models.yml  python-ci.yml
openai-model-tracker/: __main__.py
openai_model_tracker/: __main__.py
